修改了需求说明，明确了某些部分的技术栈，新增光敏电阻传感器模块，清理垃圾文件

--- a/StreetLightControl/Project.uvprojx
+++ b/StreetLightControl/Project.uvprojx
@@ -729,6 +729,16 @@
               <FileType>5</FileType>
               <FilePath>.\Hardware\esp8266-01s.h</FilePath>
             </File>
+            <File>
+              <FileName>LightSensor.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Hardware\LightSensor.c</FilePath>
+            </File>
+            <File>
+              <FileName>LightSensor.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Hardware\LightSensor.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
