--- a/backEnd/.vscode/settings.json
+++ b/backEnd/.vscode/settings.json
@@ -69,5 +69,6 @@
         "typeindex": "cpp",
         "typeinfo": "cpp",
         "valarray": "cpp"
-    }
+    },
+    "C_Cpp.default.compilerPath": "/usr/bin/g++-11"
 }
