``` build(cmake): 更新 CMakeLists.txt 以支持更多依赖库和自动源文件查找
新增对 OpenSSL、MySQL 客户端、fmt 和 httplib 的查找与链接配置。
同时改进了源文件和头文件的自动包含机制，使用 file(GLOB_RECURSE) 递归查找 src 目录下所有 cpp 和 h 文件。

http：新增了http文件，开始着手于http服务器的后端开发
新增了Handlers、Middleware、Models、Repositories、Services和Utils文件
初步实现了认证登录的后端功能
```

--- a/backEnd/.vscode/settings.json
+++ b/backEnd/.vscode/settings.json
@@ -68,7 +68,9 @@
         "cinttypes": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "csignal": "cpp",
+        "regex": "cpp"
     },
     "C_Cpp.default.compilerPath": "/usr/bin/g++-11"
 }
